force-app/main/default/objects/Transit__c/Transit__c.object-meta.xml
<CustomObject>
    <label>Transit</label>
    <nameField>
        <displayFormat>TRS-{00000}</displayFormat>
        <label>Transit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>