force-app/main/default/objects/Transit__c/fields/ConsolidationID__c.field-meta.xml
<CustomField>
    <fullName>ConsolidationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidation ID</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipLabel>Transits</relationshipLabel>
    <relationshipName>Transits</relationshipName>
    <type>Lookup</type>
</CustomField>