force-app/main/default/objects/Transit__c/fields/Container_Mode__c.field-meta.xml
<CustomField>
    <fullName>Container_Mode__c</fullName>
    <label>Container Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCL-FCL</fullName>
            </value>
            <value>
                <fullName>LCL-LCL</fullName>
            </value>
            <value>
                <fullName>FCL-LCL</fullName>
            </value>
            <value>
                <fullName>LCL-FCL</fullName>
            </value>
            <value>
                <fullName>AIR-AIR</fullName>
            </value>
            <value>
                <fullName>FCL-AIR</fullName>
            </value>
            <value>
                <fullName>AIR-FCL</fullName>
            </value>
            <value>
                <fullName>LCL-AIR</fullName>
            </value>
            <value>
                <fullName>AIR-LCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>