force-app/main/default/objects/Transit__c/fields/DaysafterETDatTransitPort__c.field-meta.xml
<CustomField>
    <fullName>DaysafterETDatTransitPort__c</fullName>
    <formula>TODAY () -  ETDatTransitPort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days after ETD at Transit Port</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>