force-app/main/default/objects/Transit__c/fields/ETAatTransitPort__c.field-meta.xml
<CustomField>
    <fullName>ETAatTransitPort__c</fullName>
    <label>ETA at Transit Port</label>
    <type>Date</type>
</CustomField>