force-app/main/default/objects/Transit__c/fields/ETDatTransitPort__c.field-meta.xml
<CustomField>
    <fullName>ETDatTransitPort__c</fullName>
    <label>ETD at Transit Port</label>
    <type>Date</type>
</CustomField>