force-app/main/default/objects/Transit__c/fields/FTMSSOID__c.field-meta.xml
<CustomField>
    <fullName>FTMSSOID__c</fullName>
    <label>F/TMS S/O ID</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipLabel>Transits</relationshipLabel>
    <relationshipName>Transits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>