force-app/main/default/objects/Transit__c/fields/HandlingAgentatTransitPort__c.field-meta.xml
<CustomField>
    <fullName>HandlingAgentatTransitPort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handling Agent at Transit Port</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transits (Handling Agent at Transit Port)</relationshipLabel>
    <relationshipName>Transits2</relationshipName>
    <type>Lookup</type>
</CustomField>