force-app/main/default/objects/Transit__c/fields/InOrderofTransit__c.field-meta.xml
<CustomField>
    <fullName>InOrderofTransit__c</fullName>
    <label>In Order of Transit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>