force-app/main/default/objects/Transit__c/fields/LengthofStaysforTransit__c.field-meta.xml
<CustomField>
    <fullName>LengthofStaysforTransit__c</fullName>
    <formula>ETAatTransitPort__c -  ETDatTransitPort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Stays for Transit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>