force-app/main/default/objects/Transit__c/fields/MasterConsolidatorCarrier__c.field-meta.xml
<CustomField>
    <fullName>MasterConsolidatorCarrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Consolidator/Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transits (Master Consolidator/Carrier)</relationshipLabel>
    <relationshipName>Transits1</relationshipName>
    <type>Lookup</type>
</CustomField>