force-app/main/default/objects/Transit__c/fields/ShipperbeforeSwitch__c.field-meta.xml
<CustomField>
    <fullName>ShipperbeforeSwitch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper before Switch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transits</relationshipLabel>
    <relationshipName>Transits</relationshipName>
    <type>Lookup</type>
</CustomField>