force-app/main/default/objects/Transit__c/fields/SwitchHBLNumber__c.field-meta.xml
<CustomField>
    <fullName>SwitchHBLNumber__c</fullName>
    <label>Switch H B/L Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>