force-app/main/default/objects/Transit__c/fields/SwitchMBLNumber__c.field-meta.xml
<CustomField>
    <fullName>SwitchMBLNumber__c</fullName>
    <label>Switch M B/L Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>