force-app/main/default/objects/Transit__c/fields/TransitPort__c.field-meta.xml
<CustomField>
    <fullName>TransitPort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Transits</relationshipLabel>
    <relationshipName>Transits</relationshipName>
    <type>Lookup</type>
</CustomField>