force-app/main/default/objects/Transit__c/fields/TransitPortCode__c.field-meta.xml
<CustomField>
    <fullName>TransitPortCode__c</fullName>
    <formula>TransitPort__r.PortCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Port Code</label>
    <type>Text</type>
</CustomField>