force-app/main/default/objects/Transit__c/fields/TransitVesselFlight__c.field-meta.xml
<CustomField>
    <fullName>TransitVesselFlight__c</fullName>
    <label>Transit Vessel/Flight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>