force-app/main/default/objects/Transit__c/fields/TransitVoyage__c.field-meta.xml
<CustomField>
    <fullName>TransitVoyage__c</fullName>
    <label>Transit Voyage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>