force-app/main/default/objects/Transit__c/recordTypes/CONSOLIDATIONTRANSIT.recordType-meta.xml
<RecordType>
    <fullName>CONSOLIDATIONTRANSIT</fullName>
    <active>true</active>
    <label>CONSOLIDATION TRANSIT</label>
</RecordType>