force-app/main/default/objects/Transit__c/recordTypes/SHIPMENTORDERTRANSIT.recordType-meta.xml
<RecordType>
    <fullName>SHIPMENTORDERTRANSIT</fullName>
    <active>true</active>
    <label>SHIPMENT ORDER TRANSIT</label>
</RecordType>